# itmo.recsys

./: .gitignore  main.py  pyproject.toml
service/api/app/: app.py
test/: test_api.py
