[tool.poetry]
name = "recsys"
version = "0.1.0"
description = ""
authors = ["da-kartushov <kartyshov.d@team.karpov.courses>"]

[tool.poetry.dependencies]
python = "3.8.10"
pytest = "^7.4.3"
requests = "^2.31.0"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
uvicorn = "^0.24.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
